fixed horizontal alignment in mobile view

--- a/src/web/style.css
+++ b/src/web/style.css
@@ -114,6 +114,9 @@ hr{
 	h2{
 		width:auto;
 	}
+	#container div {
+		margin:auto;
+	}
 }
 
 
